refactor(core): Enhance security and notification
Refactors authentication, notification, and company services:
- Updates security interceptors and filters for improved JWT handling.
- Implements FCM for sending push notifications to devices using userId.
- Modifies company registration to support notification events.
- Configures gRPC.